fix: more wiring
